--- a/about.html
+++ b/about.html
@@ -100,17 +100,13 @@
 
                 <h2>Thanks and Credits to:</h2>
                 <ul>
-                    <li>Logo: <a href="https://icons8.com/">Icons8</a></li>
-                    <li>API: <a href="https://www.themoviedb.org/">The Movie Database (TMDb)</a></li>
-                    <li>Inspiration: <a href="https://www.imdb.com/">IMDb</a>, <a
-                            href="https://letterboxd.com/">Letterboxd</a>, <a href="https://netflix.com">Netflix</a>
-                    </li>
-                    <li>Icons: <a href="https://fontawesome.com/">FontAwesome</a>, <a
-                            href="https://icons8.com/">Icons8</a></li>
-                    <li>Slider: <a href="https://swiperjs.com/">Swiper</a></li>
-                    <li>CSS Framework: <a href="https://getbootstrap.com/">Bootstrap</a> ( <a
-                            href="https://bootswatch.com/">Cyborg BootswatchTheme</a> )</li>
-                    <li>JavaScript Library: <a href="https://jquery.com/">jQuery</a></li>
+                    <li>Logo: <a href="https://icons8.com/" target="_blank">Icons8</a></li>
+                    <li>API: <a href="https://www.themoviedb.org/" target="_blank">The Movie Database (TMDb)</a></li>
+                    <li>Inspiration: <a href="https://www.imdb.com/" target="_blank">IMDb</a>, <a href="https://letterboxd.com/" target="_blank">Letterboxd</a>, <a href="https://netflix.com" target="_blank">Netflix</a></li>
+                    <li>Icons: <a href="https://fontawesome.com/" target="_blank">FontAwesome</a>, <a href="https://icons8.com/" target="_blank">Icons8</a></li>
+                    <li>Slider: <a href="https://swiperjs.com/" target="_blank">Swiper</a></li>
+                    <li>CSS Framework: <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a> (<a href="https://bootswatch.com/" target="_blank">Cyborg BootswatchTheme</a>)</li>
+                    <li>JavaScript Library: <a href="https://jquery.com/" target="_blank">jQuery</a></li>
                 </ul>
                 <h2>Important Information</h2>
                 <p>This website is not affiliated with IMDb, TMDb, Letterboxd, Netflix or any other listed service/website.</p>
