--- a/about.html
+++ b/about.html
@@ -1,11 +1,10 @@
-<!-- Movie Library like Netflix -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Movies Library</title>
+    <title>About - JMovies</title>
 
     <script>
         let startTimestamp = Date.now();
@@ -47,8 +46,7 @@
                 <button class="btn btn-outline-primary d-block d-lg-none d-md-none"><i
                         class="fas fa-search"></i></button>
                 <button class="btn btn-outline-primary mx-2"><i class="fas fa-user"></i></button>
-                <button class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#categories"><i
-                        class="fas fa-bars"></i></button>
+                
             </div>
         </div>
     </nav>
