--- a/details.html
+++ b/details.html
@@ -1,11 +1,10 @@
-<!-- Movie Library like Netflix -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies Library</title>
+    <title>JMovies</title>
     <script>
         let startTimestamp = Date.now();
     </script>
@@ -36,8 +35,7 @@
                 <button class="btn btn-outline-primary d-block d-lg-none d-md-none"><i
                         class="fas fa-search"></i></button>
                 <button class="btn btn-outline-primary mx-2"><i class="fas fa-user"></i></button>
-                <button class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#categories"><i
-                        class="fas fa-bars"></i></button>
+                
             </div>
         </div>
     </nav>
@@ -301,7 +299,7 @@
                 </span></p>
             <div class="">
                 <a href="#" id="watch-watchBtn" class="btn btn-primary placeholder">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> <!-- <i class="fa-solid fa-play"></i> Watch -->
-                <a href="#" id="watch-watchlistBtn" class="btn btn-secondary placeholder">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                <a href="" id="watch-watchlistBtn" class="btn btn-secondary placeholder">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </div>
         </div>
         <a class="play d-none" id="playTrailer">
@@ -339,19 +337,15 @@
     <div class="swiper m-2 p-2" id="watch-recommended">
         <div class="swiper-wrapper" id="watch-recommended-wrapper">
 
-
             <div class="trending-slide swiper-slide placeholder-glow">
-
                 <img src="assets/image/poster_placeholder.png"
                     alt="Movie Poster" class="movie-slide-poster placeholder" loading="lazy">
 
                 <div class="trending-shadow"></div>
                 <div class="trending-shadow2"></div>
 
-
                 <div class="trending-content">
                     <div class="trending-slide-rating d-flex justify-content-between">
-
                         <span class="placeholder">
                             <span class="rating-value">W</span>
                             <span class="rating-value">8.5</span>
