--- a/details.html
+++ b/details.html
@@ -298,7 +298,7 @@
             <p id="watch-short-description"><span class="placeholder">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, nam natus aliquam ab at incidunt esse quos aliquid. At esse vero necessitatibus repellendus laboriosam architecto nam corrupti ipsum quam nostrum.
                 </span></p>
             <div class="">
-                <a href="#" id="watch-watchBtn" class="btn btn-primary placeholder">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> <!-- <i class="fa-solid fa-play"></i> Watch -->
+                <a href="" id="watch-watchBtn" class="btn btn-primary placeholder">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> <!-- <i class="fa-solid fa-play"></i> Watch -->
                 <a href="" id="watch-watchlistBtn" class="btn btn-secondary placeholder">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </div>
         </div>
@@ -641,15 +641,9 @@
     </div>
 </footer>
 
-
 <script src="assets/js/loadjs.min.js"></script>
 <script src="assets/js/init.js"></script>
 
-<script>
-function watchInit() {
-    let watchId = getParameterByName('id');
-}
-</script>
 
 
 </body>
