--- a/details.html
+++ b/details.html
@@ -40,15 +40,7 @@
             </div>
         </div>
     </nav>
-    <div class="collapse mt-2 mb-2" id="mobile-search">
-        <div class="container">
-            <form class="d-flex input-group" data-search="form" onsubmit="search(event)">
-                <input class="form-control form-control-outline-primary" type="search" placeholder="Search"
-                    aria-label="Search" data-search="input">
-                <button class="btn btn-outline-primary" type="submit" data-search="button"><i class="fas fa-arrow-right"></i></button>
-            </form>
-        </div>
-    </div>
+    
 
 
     <style>
@@ -277,9 +269,20 @@
     </style>
 
     <div class="banner placeholder-glow">
+	
         <!-- <img src="./assets/image/7bdh8bG.jpg" class="bg" alt="bg img"> -->
         <img src="./assets/image/banner_placeholder.png" class="bg" alt="bg img" id="watch-banner">
+		
         <div class="content">
+		<div class="collapse" id="mobile-search" style="margin-top: -130px; margin-bottom: 130px;">
+        <div class="container">
+            <form class="d-flex input-group" data-search="form" onsubmit="search(event)">
+                <input class="form-control form-control-outline-primary" type="search" placeholder="Search"
+                    aria-label="Search" data-search="input">
+                <button class="btn btn-outline-primary" type="submit" data-search="button"><i class="fas fa-arrow-right"></i></button>
+            </form>
+        </div>
+    </div>
             <img src="assets/image/label_poster_placeholder.png"
                 alt="movie name" class="movieTitleImg" id="watch-poster">
                 <br>
