update 11 files and delete 3 files

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 <button class="btn btn-outline-primary d-block d-lg-none d-md-none" data-search="button" data-bs-toggle="collapse" data-bs-target="#mobile-search"
                 ><i
                         class="fas fa-search"></i></button>
-                <button class="btn btn-outline-primary mx-2"><i class="fas fa-user"></i></button>
-            </div>
+                        <a class="btn btn-outline-primary mx-2" href="./user.html"><i class="fas fa-user"></i></a>
+                    </div>
         </div>
     </nav>
     <div class="collapse mt-2 mb-2" id="mobile-search">
@@ -813,8 +813,8 @@
         <div class="container">
             <div class="social-link">
                 <ul class="">
-                    <li><a href="https://go.jm26.net/jm"><i class="fas fa-globe"></i></a></li>
-                    <li><a href="https://github.com/JMcrafter26/JMovies"><i class="fab fa-github"></i></a></li>
+                    <li><a href="https://go.jm26.net/jm" target="_blank"><i class="fas fa-globe"></i></a></li>
+                    <li><a href="https://github.com/JMcrafter26/JMovies" target="_blank"><i class="fab fa-github"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
                     <li><a href="#"><i class="fab fa-instagram"></i></a></li>
                 </ul>
