--- a/search.html
+++ b/search.html
@@ -62,30 +62,6 @@
             </div>
             <div class="col-12">
 
-                <style>
-                    .search-results-container {
-                        display: flex;
-                        flex-wrap: wrap;
-                        justify-content: center;
-                        width: 100%;
-                    }
-                    .search-results {
-                        display: flex;
-                        flex-wrap: wrap;
-                        /* align-items: center; */
-                        /* justify-content: space-between; */
-                        justify-content: center;
-                    }
-
-                    .search-results .trending-slide {
-                        margin: 10px;
-                        width: 200px;
-                        height: 300px;
-                        position: relative;
-                        
-                    }
-                </style>
-
                 <div class="searchResults">
                     <div class="m-2 p-2 search-results-container" id="search-results">
                         <!-- these are not used with swiper, the name is just for reference -->
@@ -293,7 +269,7 @@
         <div class="container">
             <div class="social-link">
                 <ul class="">
-                    <li><a href="https://go.jm26.net/jm"><i class="fas fa-globe"></i></a></li>
+                    <li><a href="https://go.jm26.net/jm" target="_blank"><i class="fas fa-globe"></i></a></li>
                     <li><a href="https://github.com/JMcrafter26/JMovies"><i class="fab fa-github"></i></a>
                     </li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
