--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                 <button class="btn btn-outline-primary d-block d-lg-none d-md-none" data-search="button" data-bs-toggle="collapse" data-bs-target="#mobile-search"
                 ><i
                         class="fas fa-search"></i></button>
-                <button class="btn btn-outline-primary mx-2"><i class="fas fa-user"></i></button>
+                <a class="btn btn-outline-primary mx-2" href="./user.html"><i class="fas fa-user"></i></a>
             </div>
         </div>
     </nav>
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="social-link">
                 <ul class="">
-                    <li><a href="https://go.jm26.net/jm"><i class="fas fa-globe"></i></a></li>
+                    <li><a href="https://go.jm26.net/jm" target="_blank"><i class="fas fa-globe"></i></a></li>
                     <li><a href="https://github.com/JMcrafter26/JMovies"><i class="fab fa-github"></i></a>
                     </li>
                     <li><a href="#"><i class="fab fa-twitter"></i></a></li>
